// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default empty array 1`] = `
"/**
 * The value
 *
 * @default [ ]
 */
"
`;

exports[`default empty object 1`] = `
"/**
 * The value
 *
 * @default { }
 */
"
`;

exports[`default filled array 1`] = `
"/**
 * The value
 *
 * @default [1, 'two', { three: true }]
 */
"
`;

exports[`default filled object 1`] = `
"/**
 * The value
 *
 * @default {one: 1, two: '2'}
 */
"
`;

exports[`default string with description 1`] = `
"/**
 * The value
 *
 * @default 'type' name description
 */
"
`;

exports[`default value empty array 1`] = `
"/**
 * The value
 *
 * @defaultValue [ ]
 */
"
`;

exports[`default value empty object 1`] = `
"/**
 * The value
 *
 * @defaultValue { }
 */
"
`;

exports[`double default one 1`] = `
"/**
 * The value
 *
 * @default 'something'
 * @default { }
 */
"
`;

exports[`double default two 1`] = `
"/**
 * The value
 *
 * @default { }
 * @default 'something'
 */
"
`;
